
      \item TODO: remove stopifnot() from examples.

      \item TODO: get water limits on logfO2-logfS2 diagram (multi-metal.Rmd)

      \item TODO: anintro.Rmd, help files: make it clear that species with
      different units (cal, J) in OBIGT can be used in subcrt, diagrams, etc.
      in CHNOSZ.

      \item TODO: comment out data modifications in demos/mosaic.R

    }
  }

}

\section{Changes in CHNOSZ version 1.3.6 (2020-03-16)}{
  \itemize{

    \item Fix for R-devel (4.0.0): test-add.protein.R had a test that failed
      with new stringsAsFactors = FALSE default for read.table().

  }
}

\section{Changes in CHNOSZ version 1.3.5 (2020-02-16)}{
  \itemize{

    \item Fix for R-devel (4.0.0): remove documentation for unused argument
      '...' in add.protein.Rd.

  }
}

\section{Changes in CHNOSZ version 1.3.4 (2019-12-15)}{

  \subsection{THERMODYNAMIC DATA}{
    \itemize{
      \item Change data for dawsonite, scheelite, and ferberite from calories to
        Joules (as originally reported).

      \item Use correct Cp coefficients for ferberite (2nd term in equation of
        Wood and Samson, 2000 is off by a factor of 10). Thanks to Xiangchong
        Liu and David Polya for the bug report and assistance.

      \item Move more carbonates from SUPCRT92 back into the default database:
        artinite, azurite.
    }
  }

  \subsection{DIAGRAMS}{
    \itemize{
      \item Improve the handling of solids in equilibrate(). They are now excluded
        from the equilibrium calculation, but their stability fields are
        calculated using the maximum affinity method (with diagram()). Where
        solids are stable, logarithms of activities of aqueous species are set
        to -999, and vice versa. Thanks to Feng Lai for the request and test
        case.
    }
  }

  \subsection{PACKAGE CLEANUP}{
    \itemize{
      \item Remove files Sce.csv.xz and yeastgfp.csv.xz and functions yeastgfp()